--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,4 +1,8 @@
+@640px:8.53333rem;
 @440px:5.86667rem;
+@100px:1.33333rem;
+@80px:1.06667rem;
+@70px:0.93333rem;
 @60px:0.8rem;
 @50px:0.66667rem;
 @40px:0.53333rem;
@@ -7,3 +11,8 @@
 @18px:0.24rem;
 @16px:0.21333rem;
 @14px:0.18667rem;
+
+
+
+
+@color333:#333;
