--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -1,16 +1,21 @@
 @640px:8.53333rem;
 @440px:5.86667rem;
+@400px:5.33333rem;
 @240px:3.2rem;
 @220px:2.93333rem;
 @150px:2rem;
 @100px:1.33333rem;
+@90px:1.2rem;
 @80px:1.06667rem;
 @70px:0.93333rem;
+@66px:0.88rem;
 @60px:0.8rem;
 @50px:0.66667rem;
 @40px:0.53333rem;
 @36px:0.48rem;
+@32px:0.42667rem;
 @30px:0.4rem;
+@28px:0.37333rem;
 @20px:0.26667rem;
 @18px:0.24rem;
 @16px:0.21333rem;
